# clipforge

./: .gitignore  Cargo.toml
migrations/: 001_clipboard_entries.sql  002_add_fts5_search.sql
src/: main.rs
src/app/: clipboard.rs  event.rs  mod.rs  state.rs
src/config/: loader.rs  mod.rs  settings.rs
src/logging/: mod.rs
src/service/: clipboard_service.rs  mod.rs
src/storage/: clipboard_repository.rs  database.rs  migration.rs  mod.rs  models.rs  sqlite.rs
src/ui/: main_window.rs  mod.rs  workspace.rs
