[package]
name = "clipforge"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
anyhow = "1.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
serde_json = "1.0.150"
serde = { version = "1.0", features = ["derive"] }
dirs = "6.0.0"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1.23.1", features = ["v7"] }
arboard = "3.6.1"
flume = "0.12.0"
